# shm-cpp

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  bench_batch  bench_shm  blog_part1.md  blog_part2.md  cpp-style.md
3rd/protobuf/lib64/cmake/protobuf/: protobuf-targets-release.cmake  protobuf-targets.cmake
3rd/protobuf/lib64/pkgconfig/: protobuf-lite.pc  protobuf.pc
bench/: bench.md  bench_batch.cpp  bench_batch.md  bench_codec.cpp  bench_shm.cpp  bench_socket.cpp
docs/: bench_end_marker_bug.md  code_review_2026-04-10.md  code_review_report_2026-04-13.md  codec_layers.md  data_flow_visualizer.html  eventfd_vs_socket.md  proto_wrap_test.md  ring_channel.md  ringbuf_byte_stream.md  ringbuf_trywrite_tryread.md  ringbuf_visualizer.html  scm_rights.md  shm_vs_socket_bench.md
include/shm_ipc/: bench_common.hpp  client_state.hpp  codec.hpp  codec_interface.hpp  common.hpp  event_loop.hpp  frame_reader.hpp  messages.hpp  pod_codec.hpp  proto_codec.hpp  ring_channel.hpp  ringbuf.hpp
proto/: gen.sh  shm_messages.pb.cc  shm_messages.pb.h  shm_messages.proto
src/: client.cpp  server.cpp  socket_client.cpp  socket_server.cpp
test/: test_codec.cpp  test_proto_codec.cpp  test_proto_wrap.cpp  test_ringbuf_wrap.cpp
